--- a/Currículo Curso/curriculo.html
+++ b/Currículo Curso/curriculo.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 
 <meta name="author" content="Eduardo">
-<meta name="descrition" content="descrição bacunada">
+<meta name="description" content="descrição bacunada">
 <meta name="keywords" cont="Html, CSS">
 
 <link rel="stylesheet" href="curriculo.css">
